k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myservice
  namespace: demo
spec:
  selector:
    app: myservice
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  type: ClusterIP
